# wheel_legged_sim_ros

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
assets/mjcf/CJ-003/: CJ-003-pointfoot.xml
assets/mjcf/nz/: nz.xml  nz_mapping.xml  nz_view.xml  scene.xml
assets/urdf/CJ-003/meshes/: CJ-003-wheelfoot.urdf
assets/urdf/CJ-003/urdf/: CJ-003-pointfoot.urdf
assets/urdf/nz/urdf/: nz.urdf
middle_can/: CMakeLists.txt  readme.md
middle_can/can/: readme  usb_can.h  usb_can.rules
middle_can/include/: Tangair_usb2can.h
middle_can/src/: Tangair_usb2can.cpp  can_node.cpp
src/mujoco_sim/: CMakeLists.txt  package.xml
src/mujoco_sim/src/: main.cpp
src/urdf_publisher/: package.xml  setup.py
src/urdf_publisher/launch/: robot_state_pub_launch.py
src/urdf_publisher/rviz2/: rviz.rviz
src/wheel_legged_control/: CMakeLists.txt  package.xml
src/wheel_legged_control/include/: Biped.h  cppType.h  kinlegged.h
src/wheel_legged_control/include/joystick/: joy_receiver.h
src/wheel_legged_control/src/: Biped.cpp  main.cpp
src/wheel_legged_control/src/joystick/: joy_receiver.cpp
